[package]
name = "os"
version = "0.1.0"
edition = "2024"

# 更多键及其定义请参见：https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] } #使用 Rust 的 riscv 库
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
sbi-rt = { version = "0.0.2", features = ["legacy"] }

[profile.release]
debug = true
